<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICareApp</string>
    <string name="simage">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile">My Profile</string>
    <string name="dietChart">My Diet Chart</string>
    <string name="tittle">My ICare Profile</string>
    <string name="name">Name</string>
    <string name="fname">Father Name</string>
    <string name="mname">Mother Name</string>
    <string name="dob">Date of Birth</string>
    <string name="weight">Weight (K.G)</string>
    <string name="height">Height (cm)</string>
    <string name="ecolor">Eye Color</string>
    <string name="comment">Special Comment</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="addDietChart">Add your Diet Chart</string>
    <string name="tittleAddDiet">Add New Diet</string>
    <string name="mealName">Meal Name</string>
    <string name="menu">Menu</string>
    <string name="checkBoxAlarm">Set Alarm</string>
    <string name="add">Add Diet</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tittleToday">Today Diet Chart</string>
    <string name="upcomingDiet">Upcoming Diet Chart</string>
    <string name="email">Email</string>
    <string name="disease">If any major disease</string>
    <string name="tittleViewAll">My Diet Charts</string>
    <string name="radioButtonAll">All</string>
    <string name="radioButtonWk">Weekly</string>
    <string name="radioButtonMonth">Monthly</string>
    <string name="pickDate">Enter date</string>
    <string name="pickMonth">Select Month</string>
    <string name="deleteChart">Delete Chart</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit Profile</string>
    <string name="chart">Create Chart</string>
    <string name="vprofile">View Profile</string>
    <string name="vall">All Diet</string>
    <string name="option">Select Option</string>
    <string name="view_diet">My Diet</string>

</resources>