<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    

    <TextView
        android:id="@+id/tittleAddDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40c4ff"
        android:gravity="center"
        android:text="@string/tittleAddDiet"
        android:textColor="#e1f5fe"
        android:textSize="35sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/mealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mealName"
            android:textColor="#1a237e"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/mealNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:inputType="text"
            android:textColor="#1a237e" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:text="@string/menu"
        android:textColor="#1a237e"
        android:textSize="20sp" />
    
   

    <EditText
        android:id="@+id/menuET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="20"
         android:inputType="text" 
        android:textColor="#1a237e" /> 
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="#1a237e"
            android:textSize="20sp" />
    

    <EditText
        android:id="@+id/dateET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="20"
        android:textColor="#1a237e"
        android:onClick="setDate" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="#1a237e"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/timeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:inputType="text"
            android:textColor="#1a237e"
            android:onClick="setTime" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/checkBoxAlarm"
        android:textColor="#1a237e"
        android:textSize="20sp" />

    

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#40c4ff"
        android:text="@string/add"
        android:textColor="#e1f5fe"
        android:layout_marginTop="30dp"
        android:clickable="true" />

</LinearLayout>
</ScrollView>