<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tittleViewAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40c4ff"
        android:gravity="center"
        android:text="@string/tittleViewAll"
        android:textColor="#e1f5fe"
        android:textSize="35sp"
        android:textStyle="italic" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonAll"
                android:textColor="#1a237e"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButtonWk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonWk"
                android:textColor="#1a237e"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButtonMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonMonth"
                android:textColor="#1a237e"
                android:textSize="15sp" />
    </RadioGroup>

    <ListView
        android:id="@+id/viewDietList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#1a237e" >
    </ListView>

</LinearLayout>