<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    

    <TextView
        android:id="@+id/tittleAddDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40c4ff"
        android:gravity="center"
        android:text="@string/view_diet"
        android:textColor="#e1f5fe"
        android:textSize="35sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/mealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mealName"
            android:textColor="#1a237e"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/mealNameVW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:inputType="text"
            android:textColor="#1a237e" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:text="@string/menu"
        android:textColor="#1a237e"
        android:textSize="20sp" />
    
   

    <EditText
        android:id="@+id/menuVW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="20" 
        android:textColor="#1a237e" /> 
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="#1a237e"
            android:textSize="20sp" />
    

    <EditText
        android:id="@+id/dateVW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="20"
        android:textColor="#1a237e"
        android:onClick="setDate" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="#1a237e"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/timeVW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:inputType="text"
            android:textColor="#1a237e"
            android:onClick="setTime" />
    </LinearLayout>

</LinearLayout>
</ScrollView>